# clipvault

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs
src/components/: ClipList.tsx  SearchBar.tsx  SettingsPanel.tsx  StatusFooter.tsx
src/hooks/: useClips.ts  useKeyboard.ts
