[package]
name = "clipvault"
version = "0.1.0"
description = "A lightweight clipboard history manager"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"

# Clipboard access
arboard = "3"

# SQLite storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Content hashing for deduplication
blake3 = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Timestamps
chrono = "0.4"

